--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,10 @@
 }
 
 .container {
+  box-sizing: border-box;
   max-width: 600px;
   width: 100%;
+  padding: 0 32px;
   margin: 0 auto;
 }
 
@@ -42,11 +44,13 @@ label {
 }
 
 textarea {
+  box-sizing: border-box;
   width: 100%;
   padding: 8px;
   font-family: monospace;
   font-size: 16px;
   margin-bottom: 32px;
+  width: 100%;
 }
 
 code {
