--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,10 @@ textarea {
   width: 100%;
 }
 
+textarea::placeholder {
+  color: #bbb;
+}
+
 code {
   display: inline-block;
   font-size: 90%;
