--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ code {
 }
 
 .options {
-  flex: 1 0 auto;
+  flex: 0 0 auto;
   display: flex;
   flex-direction: column;
   padding: 16px;
@@ -139,6 +139,10 @@ code {
 
 .library + .library {
   margin-top: 4px;
+}
+
+.option input {
+  margin-right: 4px;
 }
 
 .see-on-github a {
